# thesis

./: .gitignore  .gitmodules  README.md  bag_command.txt  camera_viewer.py  force_stats.py  requirements.txt  ros2_apt_packages.txt  ros2_requirements.txt  ros_ws_packages.txt
LTVArm/: CMakeLists.txt  package.xml
arm_description/: arm_scaler.py  moveit_convert.py  package.xml  setup.py
arm_description/config/: panda_scaled_1.9.urdf
arm_description/launch/: panda_scaled.launch.py  panda_scaled_test.launch.py
autonomy_bc/: package.xml  setup.cfg  setup.py
autonomy_bc/autonomy_bc/: bc_controller.py  dumb_alg.py  extract_and_train.py
autonomy_bc/data/: .gitignore  demo_session2.dvc
autonomy_bc/models/: robot_bc_model.pth
driving_package/: package.xml  setup.cfg  setup.py
driving_package/driving_package/: arm_pick_place_test.py  background_bt.dot  bt_node.py  bt_orchestrator.py  draw_background_bt.py  llm_orchestrator.py  orchestrate_deployment.py  rover_commander.py  send_single_waypoint.py  test.py
driving_package/launch/: driving_package.launch.py
panda_scaled_moveit_config/: CMakeLists.txt  local_setup.sh  package.xml
panda_scaled_moveit_config/config/: ros2_controllers.yaml
panda_scaled_moveit_config/launch/: demo.launch.py
unity_moveit_bridge/: package.xml  setup.cfg  setup.py
unity_moveit_bridge/launch/: arm_launch.launch.py  unity_full_demo.launch.py
unity_moveit_bridge/unity_moveit_bridge/: control_arbitrator.py  delta_replay.py  diagnose_dataset.py  inference.py  lerobot_recorder.py  new_lerobot_record.py  orchestrate_data_collection.py  (+13 more)
